add background color for sidebar

--- a/source/stylesheets/sass/layout/_sidebar.sass
+++ b/source/stylesheets/sass/layout/_sidebar.sass
@@ -10,6 +10,7 @@
 	padding-bottom: 78px
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.54)
 	overflow: hidden
+	background: $white
 	&__logo
 		display: block
 		margin-bottom: 20px
