--- a/source/stylesheets/css/main.css
+++ b/source/stylesheets/css/main.css
@@ -216,6 +216,7 @@ footer {
      -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.54);
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.54);
   overflow: hidden;
+  background: #ffffff;
 }
 
 .sidebar__logo {
