--- a/source/stylesheets/css/main.css
+++ b/source/stylesheets/css/main.css
@@ -217,6 +217,10 @@ footer {
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.54);
   overflow: hidden;
   background: #ffffff;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  -moz-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .sidebar__logo {
@@ -334,6 +338,7 @@ footer {
 .sidebar .tabs__content ul li:hover .sidebar__buttons {
   visibility: visible;
   opacity: 1;
+  z-index: 1;
 }
 
 .sidebar .tabs__content ul li.close {
@@ -360,6 +365,7 @@ footer {
   top: 10px;
   visibility: hidden;
   opacity: 0;
+  z-index: -1;
 }
 
 .sidebar__buttons .btn {
