--- a/source/stylesheets/sass/layout/_sidebar.sass
+++ b/source/stylesheets/sass/layout/_sidebar.sass
@@ -11,6 +11,7 @@
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.54)
 	overflow: hidden
 	background: $white
+	transition: 0.3s
 	&__logo
 		display: block
 		margin-bottom: 20px
@@ -93,6 +94,7 @@
 						.sidebar__buttons
 							visibility: visible
 							opacity: 1
+							z-index: 1
 					&.close
 						background: #f5f5f5
 						a
@@ -109,6 +111,7 @@
 		top: 10px
 		visibility: hidden
 		opacity: 0
+		z-index: -1
 		//+transition(0.3s ease-in-out)
 		.btn
 			border: 0
