Google PageSpeed Insights optimization, add min height for sidebar

--- a/source/stylesheets/sass/layout/_sidebar.sass
+++ b/source/stylesheets/sass/layout/_sidebar.sass
@@ -12,6 +12,7 @@
 	overflow: hidden
 	background: $white
 	transition: 0.3s
+	min-height: 950px
 	&__logo
 		display: block
 		margin-bottom: 20px
@@ -84,7 +85,6 @@
 			ul
 				li
 					padding: 13px 55px 14px 25px
-					//+transition(0.3s ease-in-out)
 					position: relative
 					a
 						color: inherit
@@ -112,7 +112,6 @@
 		visibility: hidden
 		opacity: 0
 		z-index: -1
-		//+transition(0.3s ease-in-out)
 		.btn
 			border: 0
 			outline: 0
